--- a/public/css/app.css
+++ b/public/css/app.css
@@ -711,6 +711,9 @@ video {
 .mt-10 {
   margin-top: 2.5rem;
 }
+.mt-12 {
+  margin-top: 3rem;
+}
 .mt-14 {
   margin-top: 3.5rem;
 }
@@ -725,6 +728,9 @@ video {
 }
 .mt-4 {
   margin-top: 1rem;
+}
+.mt-5 {
+  margin-top: 1.25rem;
 }
 .mt-6 {
   margin-top: 1.5rem;
@@ -758,6 +764,9 @@ video {
 }
 .h-0 {
   height: 0px;
+}
+.h-1\/4 {
+  height: 25%;
 }
 .h-10 {
   height: 2.5rem;
@@ -804,6 +813,9 @@ video {
 .h-6 {
   height: 1.5rem;
 }
+.h-60 {
+  height: 15rem;
+}
 .h-64 {
   height: 16rem;
 }
@@ -834,6 +846,9 @@ video {
 }
 .min-h-\[100px\] {
   min-height: 100px;
+}
+.min-h-\[160px\] {
+  min-height: 160px;
 }
 .min-h-\[50px\] {
   min-height: 50px;
@@ -956,8 +971,21 @@ video {
 .w-full {
   width: 100%;
 }
+.w-1\/5 {
+  width: 20%;
+}
+.w-0 {
+  width: 0px;
+}
 .min-w-\[250px\] {
   min-width: 250px;
+}
+.min-w-\[470px\] {
+  min-width: 470px;
+}
+.min-w-fit {
+  min-width: -moz-fit-content;
+  min-width: fit-content;
 }
 .max-w-4xl {
   max-width: 56rem;
@@ -970,6 +998,12 @@ video {
 }
 .max-w-xs {
   max-width: 20rem;
+}
+.max-w-\[150px\] {
+  max-width: 150px;
+}
+.flex-1 {
+  flex: 1 1 0%;
 }
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
@@ -1106,6 +1140,10 @@ video {
 }
 .rounded-xl {
   border-radius: 0.75rem;
+}
+.rounded-t-xl {
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
 }
 .rounded-br-\[0px\] {
   border-bottom-right-radius: 0px;
@@ -1339,6 +1377,10 @@ video {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.px-28 {
+  padding-left: 7rem;
+  padding-right: 7rem;
+}
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1394,6 +1436,14 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
 }
 .pb-1 {
   padding-bottom: 0.25rem;
@@ -1452,6 +1502,9 @@ video {
 .pt-5 {
   padding-top: 1.25rem;
 }
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
 .text-left {
   text-align: left;
 }
@@ -1460,6 +1513,9 @@ video {
 }
 .text-right {
   text-align: right;
+}
+.text-end {
+  text-align: end;
 }
 .font-cabin {
   font-family: "Cabin",  sans-serif;
@@ -1528,6 +1584,9 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.italic {
+  font-style: italic;
 }
 .text-blue-400 {
   --tw-text-opacity: 1;
@@ -1985,6 +2044,10 @@ video {
     margin: 2rem;
   }
 
+  .sm\:m-auto {
+    margin: auto;
+  }
+
   .sm\:mt-0 {
     margin-top: 0px;
   }
@@ -2001,6 +2064,22 @@ video {
     display: inline;
   }
 
+  .sm\:flex {
+    display: flex;
+  }
+
+  .sm\:h-60 {
+    height: 15rem;
+  }
+
+  .sm\:h-56 {
+    height: 14rem;
+  }
+
+  .sm\:h-full {
+    height: 100%;
+  }
+
   .sm\:w-2\/5 {
     width: 40%;
   }
@@ -2009,12 +2088,47 @@ video {
     width: 11rem;
   }
 
+  .sm\:w-60 {
+    width: 15rem;
+  }
+
+  .sm\:w-56 {
+    width: 14rem;
+  }
+
+  .sm\:w-1\/5 {
+    width: 20%;
+  }
+
+  .sm\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .sm\:max-w-\[200px\] {
     max-width: 200px;
   }
 
+  .sm\:flex-col {
+    flex-direction: column;
+  }
+
+  .sm\:items-center {
+    align-items: center;
+  }
+
+  .sm\:justify-start {
+    justify-content: flex-start;
+  }
+
   .sm\:justify-end {
     justify-content: flex-end;
+  }
+
+  .sm\:space-y-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
   }
 
   .sm\:bg-gray-input {
@@ -2093,6 +2207,10 @@ video {
     height: fit-content;
   }
 
+  .md\:h-full {
+    height: 100%;
+  }
+
   .md\:min-h-fit {
     min-height: -moz-fit-content;
     min-height: fit-content;
@@ -2117,6 +2235,10 @@ video {
   .md\:-translate-x-1\/2 {
     --tw-translate-x: -50%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
