--- a/public/css/app.css
+++ b/public/css/app.css
@@ -729,9 +729,6 @@ video {
 .mt-4 {
   margin-top: 1rem;
 }
-.mt-5 {
-  margin-top: 1.25rem;
-}
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -813,9 +810,6 @@ video {
 .h-6 {
   height: 1.5rem;
 }
-.h-60 {
-  height: 15rem;
-}
 .h-64 {
   height: 16rem;
 }
@@ -855,6 +849,9 @@ video {
 }
 .min-h-screen {
   min-height: 100vh;
+}
+.w-0 {
+  width: 0px;
 }
 .w-1\/12 {
   width: 8.333333%;
@@ -971,17 +968,8 @@ video {
 .w-full {
   width: 100%;
 }
-.w-1\/5 {
-  width: 20%;
-}
-.w-0 {
-  width: 0px;
-}
 .min-w-\[250px\] {
   min-width: 250px;
-}
-.min-w-\[470px\] {
-  min-width: 470px;
 }
 .min-w-fit {
   min-width: -moz-fit-content;
@@ -993,14 +981,14 @@ video {
 .max-w-7xl {
   max-width: 80rem;
 }
+.max-w-\[150px\] {
+  max-width: 150px;
+}
 .max-w-\[200px\] {
   max-width: 200px;
 }
 .max-w-xs {
   max-width: 20rem;
-}
-.max-w-\[150px\] {
-  max-width: 150px;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1302,6 +1290,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -1369,6 +1361,10 @@ video {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
@@ -1376,10 +1372,6 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-.px-28 {
-  padding-left: 7rem;
-  padding-right: 7rem;
 }
 .px-3 {
   padding-left: 0.75rem;
@@ -1441,12 +1433,11 @@ video {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
-}
 .pb-1 {
   padding-bottom: 0.25rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 .pb-3 {
   padding-bottom: 0.75rem;
@@ -1501,9 +1492,6 @@ video {
 }
 .pt-5 {
   padding-top: 1.25rem;
-}
-.pb-2 {
-  padding-bottom: 0.5rem;
 }
 .text-left {
   text-align: left;
@@ -2068,16 +2056,16 @@ video {
     display: flex;
   }
 
-  .sm\:h-60 {
-    height: 15rem;
-  }
-
   .sm\:h-56 {
     height: 14rem;
   }
 
   .sm\:h-full {
     height: 100%;
+  }
+
+  .sm\:w-1\/5 {
+    width: 20%;
   }
 
   .sm\:w-2\/5 {
@@ -2088,16 +2076,8 @@ video {
     width: 11rem;
   }
 
-  .sm\:w-60 {
-    width: 15rem;
-  }
-
   .sm\:w-56 {
     width: 14rem;
-  }
-
-  .sm\:w-1\/5 {
-    width: 20%;
   }
 
   .sm\:w-fit {
@@ -2207,10 +2187,6 @@ video {
     height: fit-content;
   }
 
-  .md\:h-full {
-    height: 100%;
-  }
-
   .md\:min-h-fit {
     min-height: -moz-fit-content;
     min-height: fit-content;
@@ -2235,10 +2211,6 @@ video {
   .md\:-translate-x-1\/2 {
     --tw-translate-x: -50%;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .md\:items-center {
-    align-items: center;
   }
 
   .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
