--- a/views/publications/create.pug
+++ b/views/publications/create.pug
@@ -159,9 +159,15 @@ block contenido
                         section#sectionLicenses(class="mt-10")   
                             h7(class="text-2xl my-2") Licencias 
                             //-Unique no tiene licencias
-                            p#unique-licences(class="hidden text-red-500") 
-                                i(class="fa-solid fa-triangle-exclamation mr-1")
-                                span No es necesario elegir una licencia para este tipo de venta
+                            #unique-licences(class="hidden")
+                                p(class="text-red-500") 
+                                    i(class="fa-solid fa-triangle-exclamation mr-1")
+                                    span No es necesario elegir una licencia para este tipo de venta
+                                p(class="mt-4 text-gray-400") Puedes colocar una marca de agua personalizada
+                                button(type="button" id="btnChooseWatermark" class="bg-gray-600 text-white p-3 flex gap-3 items-center hover:opacity-90") 
+                                    i(class="fa-solid fa-droplet")
+                                    span Cambiar marca de agua
+
 
                             #licenses(class="space-y-4")
                                 //- Cargar licencias segun opcion libre o venta
