--- a/public/css/app.css
+++ b/public/css/app.css
@@ -599,6 +599,9 @@ video {
 .m-auto {
   margin: auto;
 }
+.m-5 {
+  margin: 1.25rem;
+}
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
@@ -674,6 +677,9 @@ video {
 }
 .mb-\[60px\] {
   margin-bottom: 60px;
+}
+.ml-10 {
+  margin-left: 2.5rem;
 }
 .ml-2 {
   margin-left: 0.5rem;
@@ -835,14 +841,23 @@ video {
 .h-screen {
   height: 100vh;
 }
+.max-h-56 {
+  max-height: 14rem;
+}
 .max-h-96 {
   max-height: 24rem;
+}
+.max-h-52 {
+  max-height: 13rem;
 }
 .min-h-\[100px\] {
   min-height: 100px;
 }
 .min-h-\[160px\] {
   min-height: 160px;
+}
+.min-h-\[250px\] {
+  min-height: 250px;
 }
 .min-h-\[50px\] {
   min-height: 50px;
@@ -861,6 +876,9 @@ video {
 }
 .w-1\/3 {
   width: 33.333333%;
+}
+.w-1\/6 {
+  width: 16.666667%;
 }
 .w-10\/12 {
   width: 83.333333%;
@@ -961,6 +979,9 @@ video {
 .w-96 {
   width: 24rem;
 }
+.w-\[600px\] {
+  width: 600px;
+}
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -1018,6 +1039,9 @@ video {
 }
 .resize-none {
   resize: none;
+}
+.list-decimal {
+  list-style-type: decimal;
 }
 .appearance-none {
   -webkit-appearance: none;
@@ -1085,6 +1109,11 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -1200,6 +1229,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.border-red-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1267,6 +1300,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -1294,6 +1331,17 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-slate-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
+}
+.bg-slate-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+.bg-gray-100\/75 {
+  background-color: rgb(243 244 246 / 0.75);
+}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -1306,10 +1354,25 @@ video {
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+.bg-gradient-to-tr {
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
 .from-gray-input {
   --tw-gradient-from: rgba(238, 238, 238, .7) var(--tw-gradient-from-position);
   --tw-gradient-to: rgba(238, 238, 238, 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.from-red-100 {
+  --tw-gradient-from: #fee2e2 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(254 226 226 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.via-red-100 {
+  --tw-gradient-to: rgb(254 226 226 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #fee2e2 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 .to-transparent {
   --tw-gradient-to: transparent var(--tw-gradient-to-position);
@@ -1492,6 +1555,9 @@ video {
 }
 .pt-5 {
   padding-top: 1.25rem;
+}
+.pt-10 {
+  padding-top: 2.5rem;
 }
 .text-left {
   text-align: left;
@@ -1692,6 +1758,15 @@ video {
 }
 .opacity-80 {
   opacity: 0.8;
+}
+.opacity-50 {
+  opacity: 0.5;
+}
+.opacity-20 {
+  opacity: 0.2;
+}
+.opacity-70 {
+  opacity: 0.7;
 }
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
