--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -15,7 +15,7 @@ html(lang="es")
         link(rel="preconnect" href="https://fonts.googleapis.com")
         link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet")
-    body.min-h-screen.bg-polished-white.font-cabin
+    body.min-h-screen.bg-polished-white.font-cabin.relative
         block contenido
 
         block scripts 
