--- a/views/publications/create.pug
+++ b/views/publications/create.pug
@@ -6,6 +6,8 @@ block styles
     link(rel="stylesheet", href="/css/createPost/privacy.css")
     link(rel="stylesheet", href="/css/createPost/allCategories.css")
     link(rel="stylesheet", href="/css/createPost/watermarkOptions.css")
+    link(rel="stylesheet", href="/css/createPost/errors.css")
+    link(rel="stylesheet", href="/css/loader.css")
     
 block contenido
     include ../layout/header
@@ -98,7 +100,7 @@ block contenido
                                 .flex.justify-between.items-center
                                     label(for="tag") Etiquetas 
                                     span(id="errTag").text-red-500.text-xs.hidden
-                                input(id="tag" type="text" placeholder="Ingrese sus etiquetas ( presione enter para agregar )" class="block w-full border border-secondary-gray rounded-md py-1.5 pl-4 focus:outline-none")
+                                input(id="tag" type="text" placeholder="Ingrese sus etiquetas ( presione enter para agregar )" class="block w-full border border-secondary-gray rounded-md py-1.5 pl-4 focus:outline-none" maxlength="15")
                                 ul(id="tags").w-full.flex.gap-2
 
                         div(class="mt-10 flex justify-center sm:justify-end")
@@ -169,7 +171,7 @@ block contenido
                                     span Cambiar marca de agua
 
 
-                            #licenses(class="space-y-4")
+                            #licenses(class="space-y-4 overflow-auto max-h-96")
                                 //- Cargar licencias segun opcion libre o venta
                                 //- Primero cargaremos las opciones de licencias Libre ya que esta seleccionado por defecto
                                 each license in rightsOfUse
@@ -270,6 +272,22 @@ block contenido
             i(class="fa-solid fa-info mr-4")
             p#infoMessage
 
+        #alertErrorsBackend(class="w-full h-full absolute top-0 z-50 grid place-content-center custom-radial-gradient hidden")
+            #alertErrorsView(class="w-[600px] min-h-[250px] h-fit bg-red-200 flex shadow-2xl border border-red-600") 
+                aside(class="w-1/6 grid place-content-center bg-red-600")
+                    i(class="fa-solid fa-triangle-exclamation text-white text-5xl")
+                div(class="w-full p-2") 
+                    header(class="flex justify-between w-full")
+                        h4(class="font-bold text-2xl mt-1 ml-2") Algo Fallo...
+                        button(type="button" class="fa-solid fa-circle-xmark text-red-600 text-2xl cursor-pointer hover:opacity-75")
+                    main(class="max-h-56 overflow-auto")
+                        ol#errorsBackend(class="list-decimal ml-10 mt-3 space-y-1")
+
+    section#sectionLoader(class="hidden absolute top-0 left-0 bottom-0 right-0 w-full h-full bg-gray-100/75 z-50 grid place-content-center")
+        div(class="flex flex-col justify-center items-center")
+            p(class="text-2xl mb-5") Guardando...
+            .loader
+
     template#categoryOfAll 
         //-input(type="radio" class="hidden" name="category")
         label.category-content(class="w-fit h-full")
@@ -299,4 +317,5 @@ block scripts
     script(src="/js/salePublication.js") 
     script(src="/js/licenses.js") 
     script(src="/js/watermark.js") 
+    script(src="/js/errorsBackend.js") 
     script(src="https://kit.fontawesome.com/e6a1497caa.js" crossorigin="anonymous")
