--- a/views/publications/publication.pug
+++ b/views/publications/publication.pug
@@ -48,7 +48,7 @@ block contenido
                     i(class="fa-solid fa-star star")
             
             div(class="w-2/3 flex justify-center")
-                img(src= imageUrl, alt=`${publication.title}` style="max-height:500px")
+                img(src= `/publications/image/${publication.image}`, alt=`${publication.title}` style="max-height:500px")
 
         div.flex.justify-between.mx-10.my-4
             .category.flex.gap-4.items-center
