--- a/public/css/app.css
+++ b/public/css/app.css
@@ -578,6 +578,9 @@ video {
 .top-\[20\%\] {
   top: 20%;
 }
+.top-10 {
+  top: 2.5rem;
+}
 .z-20 {
   z-index: 20;
 }
@@ -598,6 +601,15 @@ video {
 }
 .m-auto {
   margin: auto;
+}
+.m-3 {
+  margin: 0.75rem;
+}
+.m-6 {
+  margin: 1.5rem;
+}
+.m-8 {
+  margin: 2rem;
 }
 .mx-10 {
   margin-left: 2.5rem;
@@ -650,6 +662,10 @@ video {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+.mx-\[100px\] {
+  margin-left: 100px;
+  margin-right: 100px;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
@@ -1005,6 +1021,12 @@ video {
 .max-w-xs {
   max-width: 20rem;
 }
+.max-w-5xl {
+  max-width: 64rem;
+}
+.max-w-\[1600px\] {
+  max-width: 1600px;
+}
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1155,6 +1177,14 @@ video {
 .rounded-t-xl {
   border-top-left-radius: 0.75rem;
   border-top-right-radius: 0.75rem;
+}
+.rounded-l-md {
+  border-top-left-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
+.rounded-r-md {
+  border-top-right-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
 }
 .rounded-br-\[0px\] {
   border-bottom-right-radius: 0px;
@@ -1467,6 +1497,10 @@ video {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
+.px-11 {
+  padding-left: 2.75rem;
+  padding-right: 2.75rem;
+}
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1702,6 +1736,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
@@ -1766,6 +1804,18 @@ video {
 }
 .outline-1 {
   outline-width: 1px;
+}
+.ring-1 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.ring-inset {
+  --tw-ring-inset: inset;
+}
+.ring-gray-300 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
 }
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
@@ -1854,6 +1904,12 @@ video {
 }
 
 
+.hover\:border-black:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+
 .hover\:border-blue-400:hover {
   --tw-border-opacity: 1;
   border-color: rgb(96 165 250 / var(--tw-border-opacity));
@@ -1878,6 +1934,11 @@ video {
 }
 
 
+.hover\:bg-gray-400\/10:hover {
+  background-color: rgb(156 163 175 / 0.1);
+}
+
+
 .hover\:bg-gray-input:hover {
   background-color: rgba(238, 238, 238, .7);
 }
@@ -1898,6 +1959,18 @@ video {
 .hover\:bg-secondary-gray:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(146 154 171 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-gray-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 
@@ -1938,6 +2011,11 @@ video {
 }
 
 
+.focus\:z-20:focus {
+  z-index: 20;
+}
+
+
 .focus\:w-64:focus {
   width: 16rem;
 }
@@ -1969,6 +2047,11 @@ video {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+
+.focus\:outline-offset-0:focus {
+  outline-offset: 0px;
 }
 
 
@@ -2019,6 +2102,12 @@ video {
 .group:hover .group-hover\:border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
+
+.group:hover .group-hover\:text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 
@@ -2352,6 +2441,10 @@ video {
     width: 90%;
   }
 
+  .lg\:max-w-7xl {
+    max-width: 80rem;
+  }
+
   .lg\:flex-1 {
     flex: 1 1 0%;
   }
@@ -2359,6 +2452,11 @@ video {
   .lg\:columns-3 {
     -moz-columns: 3;
          columns: 3;
+  }
+
+  .lg\:columns-4 {
+    -moz-columns: 4;
+         columns: 4;
   }
 
   .lg\:flex-row {
@@ -2431,6 +2529,15 @@ video {
 
 
 @media (min-width: 1536px) {
+
+  .\32xl\:max-w-none {
+    max-width: none;
+  }
+
+  .\32xl\:columns-4 {
+    -moz-columns: 4;
+         columns: 4;
+  }
 
   .\32xl\:justify-center {
     justify-content: center;
