--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -1,6 +1,7 @@
 extends ./layout/index
 
 block styles 
+    link(rel="stylesheet", href="/css/responsiveImages.css")
 
 block contenido
     main(class="min-h-screen flex flex-col")
@@ -24,18 +25,14 @@ block contenido
                     span.font-bold= nameUserPhoto
 
             //- Seccion fotos en general
-            section#images(class="lg:columns-3 columns-2xs gap-4 my-8 space-y-4 max-w-7xl m-auto p-3") 
-            
-            .loader(class="w-full grid place-content-center mb-2 hidden")
-                img(src="/img/project/spinning-circles.svg" class="")
-
-            //pre= JSON.stringify(publications,undefined,2)
+            section#images(class="max-w-7xl my-8 m-auto p-8 md:p-3")
 
     template#publication
-        div(class="relative group")
+        //div(class="relative group item")
+        div(class="relative group item father")
             a.linkPublication(class="relative block overflow-hidden cursor-pointer") 
 
-                img.principalImage(class="w-full transform object-cover transition-all duration-1000 transition-filter hover:scale-105")
+                img.principalImage(class="masonry-content w-full transform object-cover transition-all duration-1000 transition-filter hover:scale-105")
 
                 div(class="absolute bg-black bg-opacity-60 bottom-0 left-0 w-full h-full p-2 flex flex-col justify-between transition-all duration-500 opacity-0 group-hover:opacity-100") 
                     
@@ -51,7 +48,7 @@ block contenido
                     span.title(class="text-white")
 
                     a(href="#") 
-                        div(class="flex flex-col items-center") 
+                        div(class="flex flex-col items-center pb-3") 
                             img.categoryImage(class="w-9 h-8 rounded-full")
                             span.categoryName(class="text-white text-xs")
 
