--- a/public/css/app.css
+++ b/public/css/app.css
@@ -584,6 +584,9 @@ video {
 .top-\[20\%\] {
   top: 20%;
 }
+.z-10 {
+  z-index: 10;
+}
 .z-20 {
   z-index: 20;
 }
@@ -627,6 +630,10 @@ video {
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+}
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 .mx-\[3\%\] {
   margin-left: 3%;
@@ -683,6 +690,9 @@ video {
 }
 .mb-\[60px\] {
   margin-bottom: 60px;
+}
+.ml-1 {
+  margin-left: 0.25rem;
 }
 .ml-10 {
   margin-left: 2.5rem;
@@ -844,6 +854,9 @@ video {
 .h-full {
   height: 100%;
 }
+.h-px {
+  height: 1px;
+}
 .h-screen {
   height: 100vh;
 }
@@ -992,6 +1005,9 @@ video {
 .w-full {
   width: 100%;
 }
+.min-w-\[150px\] {
+  min-width: 150px;
+}
 .min-w-\[250px\] {
   min-width: 250px;
 }
@@ -1010,6 +1026,9 @@ video {
 }
 .max-w-\[200px\] {
   max-width: 200px;
+}
+.max-w-\[300px\] {
+  max-width: 300px;
 }
 .max-w-xs {
   max-width: 20rem;
@@ -1103,6 +1122,14 @@ video {
 .gap-5 {
   gap: 1.25rem;
 }
+.gap-x-1 {
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+.gap-x-1\.5 {
+  -moz-column-gap: 0.375rem;
+       column-gap: 0.375rem;
+}
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.25rem * var(--tw-space-x-reverse));
@@ -1194,8 +1221,14 @@ video {
 .border-4 {
   border-width: 4px;
 }
+.border-b {
+  border-bottom-width: 1px;
+}
 .border-b-2 {
   border-bottom-width: 2px;
+}
+.border-b-8 {
+  border-bottom-width: 8px;
 }
 .border-t {
   border-top-width: 1px;
@@ -1244,9 +1277,15 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.border-b-transparent {
+  border-bottom-color: transparent;
+}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.bg-black\/20 {
+  background-color: rgb(0 0 0 / 0.2);
 }
 .bg-blue-100 {
   --tw-bg-opacity: 1;
@@ -1405,11 +1444,11 @@ video {
 .p-6 {
   padding: 1.5rem;
 }
-.p-\[5px\] {
-  padding: 5px;
-}
 .p-8 {
   padding: 2rem;
+}
+.p-\[5px\] {
+  padding: 5px;
 }
 .px-10 {
   padding-left: 2.5rem;
@@ -1847,6 +1886,9 @@ video {
 .duration-500 {
   transition-duration: 500ms;
 }
+.duration-100 {
+  transition-duration: 100ms;
+}
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1929,6 +1971,12 @@ video {
 }
 
 
+.hover\:bg-gray-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+
 .hover\:bg-gray-input:hover {
   background-color: rgba(238, 238, 238, .7);
 }
@@ -1999,6 +2047,12 @@ video {
 }
 
 
+.focus\:border-blue-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+
 .focus\:border-hard-gray:focus {
   --tw-border-opacity: 1;
   border-color: rgb(30 30 30 / var(--tw-border-opacity));
@@ -2044,6 +2098,12 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+
+.focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
 }
 
 
@@ -2115,6 +2175,12 @@ video {
 }
 
 
+.peer:checked ~ .peer-checked\:border-b-principal-gray {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(57 62 70 / var(--tw-border-opacity));
+}
+
+
 @media (min-width: 640px) {
 
   .sm\:bottom-0 {
@@ -2135,6 +2201,11 @@ video {
 
   .sm\:m-auto {
     margin: auto;
+  }
+
+  .sm\:mx-10 {
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
   }
 
   .sm\:mt-0 {
@@ -2173,12 +2244,20 @@ video {
     width: 40%;
   }
 
+  .sm\:w-32 {
+    width: 8rem;
+  }
+
   .sm\:w-44 {
     width: 11rem;
   }
 
   .sm\:w-56 {
     width: 14rem;
+  }
+
+  .sm\:w-80 {
+    width: 20rem;
   }
 
   .sm\:w-fit {
@@ -2188,6 +2267,10 @@ video {
 
   .sm\:max-w-\[200px\] {
     max-width: 200px;
+  }
+
+  .sm\:flex-row {
+    flex-direction: row;
   }
 
   .sm\:flex-col {
@@ -2219,10 +2302,6 @@ video {
   .sm\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  }
-
-  .sm\:p-3 {
-    padding: 0.75rem;
   }
 
   .sm\:px-6 {
