--- a/views/publications/search.pug
+++ b/views/publications/search.pug
@@ -10,8 +10,11 @@ block contenido
     
     main
         section(class="pt-12 bg-white")
-            h1(class="w-full text-center text-3xl font-medium") Imágenes de 
-                span(class="text-4xl font-bold ml-1")= title
+            if title
+                h1(class="w-full text-center text-3xl font-medium") Imágenes de 
+                    span(class="text-4xl font-bold ml-1")= title
+            else 
+                h1(class="w-full text-center text-3xl font-medium") Imágenes
 
             section.types(class="sm:mx-10 mt-14 flex justify-center sm:justify-start")
                 div(class="")
