Nav con barra de busqueda agregada

--- a/views/users/myProfile.pug
+++ b/views/users/myProfile.pug
@@ -6,7 +6,7 @@ block styles
     link(rel="stylesheet", href="/css/navOptionsPhotos.css")
 
 block contenido
-    include ../layout/header
+    include ../layout/headerWithSearch
 
     main 
         section#infoProfile
