--- a/views/publications/publication.pug
+++ b/views/publications/publication.pug
@@ -9,7 +9,7 @@ block styles
 
 
 block contenido
-    include ../layout/header
+    include ../layout/headerWithSearch
     
     main
         div(class="flex justify-between mx-10 mt-10")
@@ -64,7 +64,7 @@ block contenido
                 p.text-principal-gray.text-xl.underline= rightOfUse ? rightOfUse.name : 'Sin licencia'
                 img#btnInfoRightOfUse(src="/img/project/info.svg", alt="" class="ml-2 w-5 cursor-pointer")
 
-        if publication.type == 'sale' && user.id !== userPost.id
+        if publication.type == 'sale'  && user.id !== userPost.id
             .sale(class="mx-10 flex justify-between p-4 rounded-3xl h-28 text-white bg-gradient-to-r from-black  via-gray-900 to-gray-700") 
                 div(class="flex flex-col justify-between")
                     .infoSale(class="flex flex-col") 
@@ -72,12 +72,15 @@ block contenido
                         span #{publication.currency.toUpperCase()} $#{publication.price}
                     .moreInfoSale(class="flex items-center")
                         i(class="fa-solid fa-circle-info mr-2 text-lg")
-                        if publication.typeSale == 'general'
+                        if publication.typeSale == 'general' && publication.rights_of_use_id == 2
+                            span Debes contactarte con el vendedor para adquirir esta publicación, ya que tiene licencia copyright
+                        if publication.typeSale == 'general' && publication.rights_of_use_id != 2
                             span La imagen quedara guardada en tus adquisiciones.
                         if publication.typeSale == 'unique'
                             span Esta imagen es de transferencia unica, si deseas adquirirla, ponte en contacto con el propietario.
                 div(class="flex")
-                    if publication.typeSale == 'general'
+                    //2 es el id de copyright
+                    if publication.typeSale == 'general' && publication.rights_of_use_id != 2
                         .payment(class="flex gap-2 items-center mx-3 relative")
                             input(type="radio" name="wayToPay" id='radio-mercadopago' checked class="hidden")
                             label(for="radio-mercadopago" class="cursor-pointer w-16 h-16 bg-cover bg-center bg-no-repeat" style="background-image: url(/img/project/mp-payment.jpg)")
